// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col should match a snapshot and render children 1`] = `
<ElCol
  className=""
>
  <p>
    I am child
  </p>
</ElCol>
`;

exports[`ColSplit should match a snapshot and render children 1`] = `
<ElColSplit
  className=""
>
  <p>
    I am child
  </p>
</ElColSplit>
`;

exports[`Grid should match a snapshot and render children 1`] = `
<ElGrid
  className=""
>
  <p>
    I am child
  </p>
</ElGrid>
`;
